--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=api
 
+#conexão com o banco de dados
 spring.datasource.url=jdbc:mysql://localhost/vollmed_api
 spring.datasource.username=root
 spring.datasource.password=123456
+
+#habilita o registo do sql executado no log da aplicação e formata a saída desse sql
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
