Criação classe para centralizar os tratamento de exceções, refatoração das estruturas de pastas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.password=123456
 #habilita o registo do sql executado no log da aplicação e formata a saída desse sql
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#desabilita a propriedade stacktrace no erro-padrão do Spring
+server.error.include-stacktrace=never
