--- a/pom.xml
+++ b/pom.xml
@@ -52,14 +52,19 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!--Dependências do Spring data JPA (persistência)-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
+		<!--Dependências do Spring Validation (validação)-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+
+		<!--Dependências do FlyWay (versionamento do BD, com arquivos de migrations)-->
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
@@ -69,10 +74,22 @@
 			<artifactId>flyway-mysql</artifactId>
 		</dependency>
 
+		<!--Dependências para conexão do BD MySQL-->
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+
+		<!--Dependências do Spring Security (Autenticação e Autorização-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
