Geração de Token JWT * Inclusão de dependência, configuração e criação do TokenService; * Alteração do controller e criação do DTO para a respostaToken; * Proteção da senha do token com o atributo secret no application.properties e @Value;

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #desabilita a propriedade stacktrace no erro-padrão do Spring
 server.error.include-stacktrace=never
+
+#variáveis de ambiente
+api.securanca.token.secret=${JWT_SECRET}
